--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 	"apiserver": "http://api.encrypted-vpn.com",
-	"register": "http://demo.atomicframework.net/pages/register",
-	"upgrade": "http://demo.atomicframework.net/atomic-layouts/basic/basic-1",
-	"forgotpwd": "http://demo.atomicframework.net/pages/forgot-pass",
-	"terms": "http://account.cryptovpn.pro/terms.htm"
+	"register": "http://account.encrypted-vpn.com/register",
+	"upgrade": "http://account.encrypted-vpn.com/payments",
+	"forgotpwd": "http://account.encrypted-vpn.com/forgot-password",
+	"terms": "http://account.cryptovpn.pro/terms"
 }
