--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-	"apiserver": "http://api.cryptovpn.pro",
+	"apiserver": "https://api.cryptovpn.pro",
 	"register": "https://account.cryptovpn.pro/register",
 	"upgrade": "https://account.cryptovpn.pro/payments",
 	"forgotpwd": "https://account.cryptovpn.pro/forgot-password",
