--- a/settings.json
+++ b/settings.json
@@ -3,5 +3,10 @@
 	"register": "https://account.cryptovpn.pro/register",
 	"upgrade": "https://account.cryptovpn.pro/payments",
 	"forgotpwd": "https://account.cryptovpn.pro/forgot-password",
-	"terms": "https://cryptovpn.pro/terms.html"
+	"terms": "https://cryptovpn.pro/terms.html",
+	"minimum_supported_version": "1.0.6",
+	"ios_update_url": "https://itunes.apple.com/us/app/openvpn-connect/id590379981?mt=8",
+	"android_update_url": "https://play.google.com/store/apps/details?id=net.openvpn.openvpn",
+	"ios_feedback_url": "https://itunes.apple.com/us/app/openvpn-connect/id590379981?mt=8",
+	"android_feedback_url": "https://play.google.com/store/apps/details?id=net.openvpn.openvpn"
 }
