--- a/settings.json
+++ b/settings.json
@@ -16,7 +16,7 @@
 	"messages": {
 		"ru": {
 			"1001": "Вы превысили лимит в 500 mb в месяц. Зарегистрируй акаунт, что бы иметь 1000 mb в месяц бесплатно",
-			"1002": "Мы рады , что Вы используете наш сервис и уже потратили 1000 МБ за месяц. Что бы продолжить пользоваться CryptoVPN мы предлагаем несколько вариантов оплаты наших стараний",
+			"1002": "Мы рады , что Вы используете наш сервис и уже потратили 1000 МБ за месяц. Что бы продолжить пользоваться CryptoVPN мы предлагаем несколько вариантов оплаты наших стараний"
 		}
 	}
 }
