--- a/settings.json
+++ b/settings.json
@@ -2,10 +2,10 @@
 	"apiserver": "https://api.cryptovpn.pro/",
 	"register": "https://account.cryptovpn.pro/register-webview",
 	"upgrade": "https://account.cryptovpn.pro/payments",
-	"get-more": "https://cryptovpn.pro/get-more",
+	"get-more": "https://cryptovpn.pro#plan",
 	"contact-us": "https://cryptovpn.pro/contact-us",
 	"download": "https://cryptovpn.pro/download",
-	"forgotpwd": "https://account.cryptovpn.pro/forgot-password",
+	"forgotpwd": "https://account.cryptovpn.pro/forgot-password-webview",
 	"terms": "https://cryptovpn.pro/terms.html",
 	"minimum_supported_version": "1.0.11",
 	"windows_update_url": "https://account.cryptovpn.pro/download",
