--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
 	"apiserver": "https://api.cryptovpn.pro/",
 	"register": "https://account.cryptovpn.pro/register-webview",
 	"upgrade": "https://account.cryptovpn.pro/payments",
-	"get-more": "https://cryptovpn.pro#plan",
+	"get-more": "https://account.cryptovpn.pro/get-more",
 	"contact-us": "https://cryptovpn.pro/#app",
 	"download": "https://cryptovpn.pro/download",
 	"forgotpwd": "https://account.cryptovpn.pro/forgot-password-webview",
